# Limeade

./: Constraints.py  LICENSE  README.md  pyproject.toml  requirements.txt
Limeade/: MIPMol.py  __init__.py
docs/notebooks/: basic.ipynb  enhance_feasibility.ipynb  message_for_infeasibility.ipynb  pyomo_example.ipynb  substructure_inclusion_exclusion.ipynb
limeade/: __init__.py  main.py  solver.py
notebooks/: Limeade_Pyomo.ipynb  basic.ipynb  enhance_feasibility.ipynb  message_for_infeasibility.ipynb  substructure_inclusion_exclusion.ipynb  test_morgan_fingerprint.ipynb
